--- a/fkapp/app/build.gradle
+++ b/fkapp/app/build.gradle
@@ -32,9 +32,17 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'com.google.gms:google-services:4.3.5'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
     implementation 'com.google.code.gson:gson:2.8.4'
+    //图像裁剪
+    implementation 'com.edmodo:cropper:1.0.1'
+    //文字识别
+    implementation 'com.rmtheis:tess-two:6.1.1'
+
+    //google分析
+    implementation 'com.google.android.gms:play-services-analytics:17.0.0'
 }
