--- a/fkapp/app/build.gradle
+++ b/fkapp/app/build.gradle
@@ -3,12 +3,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 28
 
     defaultConfig {
         applicationId "com.example.fkapp"
         minSdk 21
-        targetSdk 31
+        targetSdk 28
         versionCode 1
         versionName "1.0"
 
@@ -29,6 +29,9 @@ android {
 
 dependencies {
 
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    //noinspect
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
@@ -45,4 +48,5 @@ dependencies {
 
     //google分析
     implementation 'com.google.android.gms:play-services-analytics:17.0.0'
+    implementation 'androidx.work:work-runtime-ktx:2.7.0-alpha02'
 }
