--- a/fkapp/app/src/main/AndroidManifest.xml
+++ b/fkapp/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-feature android:name="android.hardware.camera" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -29,8 +30,10 @@
             android:name=".List1"
             android:exported="false" />
         <activity
-            android:name=".EditTextActivity"
-            android:exported="false" />
+            android:name=".BaseActivity" />
+        <activity
+            android:name=".EditTextActivity" />
+
         <activity
             android:name=".TakePhoteActivity"
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
