--- a/fkapp/app/build.gradle
+++ b/fkapp/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.google.gms:google-services:4.3.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation files('libs\\fastjson-1.2.4.jar')
+    implementation files('libs\\mysql-connector-java-8.0.16.jar')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -49,7 +50,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.google.code.gson:gson:2.8.4'
     implementation files('libs/android-async-http-master.jar')
-    implementation files('libs/mysql-connector-java-5.1.30-bin.jar')
+    implementation files('libs/mysql-connector-java-8.0.16.jar')
 
     //图像裁剪
     implementation 'com.edmodo:cropper:1.0.1'
