--- a/fkapp/app/src/main/AndroidManifest.xml
+++ b/fkapp/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-feature android:name="android.hardware.camera" />
 
     <application
+        android:name=".App"
         android:fullBackupOnly="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
